--- a/src/pages/contact/contact.css
+++ b/src/pages/contact/contact.css
@@ -1,6 +1,7 @@
 .contact {
   margin-top: 17px;
   padding: 33px 35px;
+  overflow: hidden;
 }
 .contact__for-messages {
   position: relative;
@@ -10,7 +11,7 @@
   left: -35px;
   z-index: -1;
   width: 100vw;
-  height: calc(100vh - 258px);
+  height: calc(100% - 66px);
   background-color: #CAE8ED;
 }
 .contact__for-messages__header {
@@ -21,5 +22,49 @@
 .contact__for-messages__form {
   z-index: 2;
   padding: 58px 0px;
+  button-border: none;
+}
+.contact__for-messages__form .input {
+  margin-bottom: 24px;
+}
+.contact__for-messages__form__descr {
+  font-size: 12px;
+  font-weight: 600;
+  margin-bottom: 24px;
+}
+.contact__for-messages__form__message {
+  resize: none;
+  display: inline-block;
+  height: 112px;
+  width: 100%;
+  background-color: #F2F3FF;
+  padding: 15px;
+  border: 1px solid #1B1C1C;
+  font-size: 14px;
+  font-weight: 600;
+  font-family: "Inconsolata";
+  margin-bottom: 24px;
+}
+.contact__for-messages__form__message:focus {
+  outline: 1px solid #1B1C1C;
+}
+.contact__for-messages__form__button {
+  cursor: pointer;
+  display: block;
+  height: 28px;
+  width: 94px;
+  font-family: "Inconsolata";
+  font-size: 12px;
+  font-weight: 500;
+  text-align: center;
+  color: #FFF;
+  border: 1px solid #1B1C1C;
+  border: none;
+  background-color: #476367;
+  margin-right: 0;
+  margin-left: auto;
+}
+.contact__for-messages__form__button:focus {
+  outline: 1px solid #1B1C1C;
 }
 /*# sourceMappingURL=contact.css.map */
