--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 body {
-  padding:0;
   margin: 0;
+  padding:0;
+  padding-bottom: 3.1875em;
   box-sizing: border-box;
   font-family: 'Inconsolata', monospace;
   -webkit-font-smoothing: antialiased;
