--- a/src/pages/contact/contact.css
+++ b/src/pages/contact/contact.css
@@ -59,12 +59,111 @@
   text-align: center;
   color: #FFF;
   border: 1px solid #1B1C1C;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border: none;
+  box-shadow: none;
   background-color: #476367;
   margin-right: 0;
   margin-left: auto;
 }
 .contact__for-messages__form__button:focus {
   outline: 1px solid #1B1C1C;
+}
+.contact__addresses__header {
+  font-size: 32px;
+  font-weight: 400;
+  margin-bottom: 24px;
+  text-align: center;
+  margin-top: 48px;
+}
+.contact__addresses__list {
+  list-style: none;
+  display: block;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin: 0 auto;
+  margin-top: 63px;
+}
+.contact__addresses__list__element {
+  display: flex;
+  align-items: center;
+  margin-bottom: 30px;
+}
+.contact__addresses__list__element i {
+  margin-right: 32px;
+}
+.contact__addresses__list__element__text {
+  font-size: 14px;
+  font-weight: 500;
+}
+.contact__addresses__comment {
+  display: block;
+  position: relative;
+  margin: 0 auto;
+  margin-top: 104px;
+  width: 100%;
+  height: 79vw;
+  background-image: url("../../../public/img/Comment-bg.svg");
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+.contact__addresses__comment .quotermark {
+  position: absolute;
+  top: 29px;
+  left: 36px;
+}
+.contact__addresses__comment__wrap {
+  position: relative;
+  max-width: none;
+  min-height: auto;
+  display: block;
+  margin: 0 auto;
+}
+.contact__addresses__comment__wrap__text {
+  position: absolute;
+  top: 15.2vw;
+  left: 23.5vw;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 18px;
+  max-width: 56%;
+  color: #FFF;
+}
+.contact__addresses__comment__wrap__email {
+  position: absolute;
+  top: 31.4vw;
+  left: 23.5vw;
+  max-width: 56%;
+  margin-top: 0px;
+  font-size: 16px;
+  font-weight: 500;
+  color: #FFF;
+}
+
+@media screen and (max-width: 360px) {
+  .contact__addresses__comment {
+    height: auto;
+    background-color: #476367;
+    background-clip: content-box;
+  }
+  .contact__addresses__comment .quotermark {
+    color: #FFF;
+  }
+  .contact__addresses__comment__wrap {
+    max-width: 150px;
+    min-height: 183px;
+    display: flex;
+    margin: 0 auto;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .contact__addresses__comment__wrap__text, .contact__addresses__comment__wrap__email {
+    position: unset;
+    max-width: unset;
+  }
+  .contact__addresses__comment__wrap__email {
+    margin-top: 12px;
+  }
 }
 /*# sourceMappingURL=contact.css.map */
