--- a/src/pages/contact/contact.scss
+++ b/src/pages/contact/contact.scss
@@ -52,9 +52,105 @@
             &__button{
                 @include components.mobileButton;
                 border: none;
+                box-shadow: none;
                 background-color: colors.$item-strong-color;
                 margin-right: 0;
                 margin-left: auto;            
+            }
+        }
+    }
+    &__addresses {
+        &__header {
+            @include fonts.mobileHeader;
+            text-align: center;
+            margin-top: 48px;
+        }
+        &__list {
+            list-style: none;
+            display: block;
+            width: fit-content;
+            margin: 0 auto;
+            margin-top: 63px;
+            &__element {
+                display: flex;
+                align-items: center;
+                margin-bottom: 30px;
+                i {
+                    margin-right: 32px;
+                }
+                &__text {
+                    font-size: 14px;
+                    font-weight: 500;
+                }
+            }
+        }
+        &__comment {
+            display: block;
+            position: relative;
+            margin: 0 auto;
+            margin-top: 104px;
+            width: 100%;
+            height: 79vw;
+            background-image: url("../../../public/img/Comment-bg.svg");
+            background-size: 100%;
+            background-repeat: no-repeat;
+            .quotermark {
+                position: absolute;
+                top: 29px;
+                left: 36px;
+            }
+            &__wrap {
+                position: relative;
+                max-width: none;
+                min-height: auto;
+                display: block;
+                margin: 0 auto;
+                &__text {
+                    position: absolute;
+                    top: 15.2vw;
+                    left: 23.5vw;
+                    font-size: 12px;
+                    font-weight: 400;
+                    line-height: 18px;
+                    max-width: 56%;
+                    color: colors.$text-white-color;
+                }
+                &__email {
+                    position: absolute;
+                    top: 31.4vw;
+                    left: 23.5vw;
+                    max-width: 56%;
+                    margin-top: 0px;
+                    font-size: 16px;
+                    font-weight: 500;
+                    color: colors.$text-white-color;
+                }
+           }
+        }
+    }
+}
+
+@media screen and (max-width: 360px) {
+    .contact__addresses__comment {
+        height: auto;
+        background-color: colors.$item-strong-color;
+        background-clip: content-box;
+        .quotermark {
+            color: colors.$text-white-color;
+        }
+        &__wrap {
+            max-width: 150px;
+            min-height: 183px;
+            display: flex;
+            margin: 0 auto;
+            flex-direction: column;
+            justify-content: center;
+            &__text, &__email {
+                position: unset;
+                max-width: unset;
+            }
+            &__email {
+                margin-top: 12px;
             }
         }
     }
