--- a/src/pages/tasks/tasks.css
+++ b/src/pages/tasks/tasks.css
@@ -13,6 +13,7 @@
   left: 0;
   z-index: -1;
   background-color: #CAE8ED;
+  background-size: cover;
   width: 100%;
   height: calc(100vh - 88px);
 }
@@ -41,7 +42,7 @@
   color: #FFF;
   border: 1px solid #1B1C1C;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  background-color: #476367;
+  background-color: #5C5E68;
   border: none;
   box-shadow: none;
   width: 27px;
